# xet-OnlineLivingStream

./: README.md  local-deploy.sh
.github/workflow/: workflow.yml
.github/workflows/: .yml  dev-1-backend.yml  workflow.yml  xet-backend.yml
documents/: 第二版后端接口文档.xlsx
documents/会议内容/: 开发日志.md  第一次会议.md  第二次会议.md
documents/环境部署参考文档/: docker国内镜像源.txt
documents/环境部署参考文档/docker部署jenkins/: jenkins信息.txt
documents/需求文档/: 前端.md  后端.md
xet-backend/: 开发日志.md
xet-backend/oatpp-starter-async/: CMakeLists.txt
xet-backend/oatpp-starter-async/src/: App.cpp
xet-backend/oatpp-starter-async/src/controller/: MediaController.hpp
xet-backend/oatpp-starter-async/video/: generate_pls.sh  z_video1_cuhunk_0.ts
xet-backend/package/: libmysqlcppconn10_9.3.0-1ubuntu24.04_amd64.deb  libmysqlcppconnx2_9.3.0-1ubuntu24.04_amd64.deb  run.sh
xet-backend/xet-backend/: CMakeLists.txt
xet-backend/xet-backend-async/: .gitignore  CMakeLists.txt
xet-backend/xet-backend-async/file/: P1017.cpp  QL-Blackjack.py  pom.xml  z_video1_cuhunk_1.ts  z_video1_cuhunk_2.ts
xet-backend/xet-backend-async/file/30/: playback30.m3u8  playlist_000.ts
xet-backend/xet-backend-async/src/: App.cpp  AppComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Utils.cpp
xet-backend/xet-backend-async/src/controller/: MediaController.hpp  接口示例.md
xet-backend/xet-backend-async/src/dao/: Dao.hpp
xet-backend/xet-backend-async/src/dto/: DTOs.hpp
xet-backend/xet-backend-async/src/service/: Service.cpp  Service.hpp
xet-backend/xet-backend-sync/: CMakeLists.txt
xet-backend/xet-backend-sync/sql/: xet_living_database_init.sql
xet-backend/xet-backend-sync/src/: App.cpp  AppComponent.hpp  LivingstreamComponent.cpp  LivingstreamComponent.hpp  MySQLComponent.cpp  MySQLComponent.hpp
xet-backend/xet-backend-sync/src/controller/LiveRoom/: LiveRoomController.cpp  LiveRoomController.hpp
xet-backend/xet-backend-sync/src/dao/: Dao.hpp
xet-backend/xet-backend-sync/src/dto/: DTOs.hpp
xet-backend/xet-backend-sync/src/service/: Service.cpp  Service.hpp
xet-backend/xet-backend/sql/: xet_living_database_init.sql
xet-backend/xet-backend/src/: App.cpp  AppComponent.hpp  SwaggerComponent.hpp
xet-backend/xet-backend/src/controller/: MediaController.hpp  接口示例.md
xet-backend/xet-backend/src/controller/LiveRoom/: LiveRoomController.hpp
xet-backend/xet-backend/src/dao/: Dao.hpp
xet-backend/xet-backend/src/dto/: DTOs.hpp
xet-backend/xet-backend/src/service/: Service.cpp  Service.hpp
xet-frontend/: Notice_before_Release.txt  README.md  package.json  vite.config.ts
xet-frontend/src/: App.vue  api.ts  avatarCache.ts  hls.d.ts  main.ts  router.ts  store.ts
xet-frontend/src/components/: ChatBox.vue  LiveControlButton.vue  UserSelector.vue  VideoPlayer.vue
xet-frontend/src/components/ChatTabs/: DiscussionTab.vue  ExplanationTab.vue  FileTab.vue
xet-frontend/src/services/: websocket.ts
xet-operation/: deploy-init.sh  docker-compose.yml
xet-operation/.github/workflows/: deploy.yml
xet-operation/backend/: Dockerfile
xet-operation/backend/mysql/: init.sql
xet-operation/frontend/: Dockerfile  navigate.html  nginx.conf
xet-operation/frontend/ssl/lcmonitor.dynv6.net/: cert.pem  fullchain.pem  privkey.pem
xet-operation/mysql/: docker-compose.yml
